Bug 507763 - Window and tab titles all say "~ : flatpak-spawn" in Flatpak-packaged version
Summary: Window and tab titles all say "~ : flatpak-spawn" in Flatpak-packaged version
Status: VERIFIED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-02 00:39 UTC by Nate Graham
Modified: 2025-09-09 14:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-08-02 00:39:12 UTC
STEPS TO REPRODUCE
1. Install Konsole from Flathub (`flatpak install org.kde.konsole`)
2. Launch it
3. Open a new tab


OBSERVED RESULT
The window titles and all the tabs say "~ : flatpak-spawn" no matter what's running


EXPECTED RESULT
The window and tab titles reflect the current working directory and running program

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-08-01
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.15.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ Ultra 5 226V
Memory: 16 GiB of RAM (15.1 GiB usable)
Graphics Processor: Intel® Graphics
Comment 1 Bug Janitor Service 2025-08-31 19:07:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/1127
Comment 2 Waqar Ahmed 2025-09-09 11:39:36 UTC
Git commit 62b6f2285ededa6dd50b1a1d8894e38963b1f06d by Waqar Ahmed.
Committed on 09/09/2025 at 11:21.
Pushed by waqar into branch 'master'.

Fix process info not available in flatpak

Since we are in a sandbox, tcgetpgrp doesn't work. To work around
this limitation, get process info using ps
Related: bug 508216

M  +89   -2    src/ProcessInfo.cpp
M  +2    -1    src/ProcessInfo.h
M  +31   -0    src/Pty.cpp
M  +27   -3    src/session/Session.cpp

https://invent.kde.org/utilities/konsole/-/commit/62b6f2285ededa6dd50b1a1d8894e38963b1f06d
Comment 3 Nate Graham 2025-09-09 14:11:13 UTC
Thanks, I can confirm it's fixed now!