Fix process info not available in flatpak

Since we are in a sandbox, tcgetpgrp doesn't work. To work around
this limitation, get process info using ps

BUG: 507763
BUG: 508216