src/ProcessInfo.h
@@ -68,8 +68,9 @@ public:
      * @param pid The pid of the process to examine
      * @param sessionPid -1 if examined process is session process,
      *		else will be pid of session process of the tab housing examined process
+     * @param tty the current tty, used by flatpak
      */
-    static ProcessInfo *newInstance(int pid, int sessionPid = -1);
+    static ProcessInfo *newInstance(int pid, int sessionPid = -1, QByteArrayView tty = QByteArrayView());
 
     virtual ~ProcessInfo()
     {
